--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.0.3",
+    "microsoft-cognitiveservices-speech-sdk": "^1.41.0",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.1",
+    "next": "14.2.16",
+    "openai": "^4.72.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.16"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
