--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.16",
     "openai": "^4.72.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
   },
