--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.0.3",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "microsoft-cognitiveservices-speech-sdk": "^1.41.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
